# Raylib-Cross-Compile-Test

./: CMakeLists.txt  build.sh  main.cpp
build-linux/: CMakeCache.txt  Game  Makefile  cmake_install.cmake  test.json
build-win64/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: Player.cpp  Player.h
